fix: app-select-style-box right spacing by text

--- a/src/assets/_main.scss
+++ b/src/assets/_main.scss
@@ -324,6 +324,7 @@ select,
 .app-select-style-box {
   position: relative;
   display: inline-block;
+  margin-right: 1rem;
 
   &:after {
     content: "";
